--- a/Bitbird.Core.Tools.Doc.DotNet/resources/build.json.tmpl
+++ b/Bitbird.Core.Tools.Doc.DotNet/resources/build.json.tmpl
@@ -18,7 +18,7 @@
       "_appFooter": "{footer}",
       "_disableContribution": true
     },
-    "dest": "_build",
+    "dest": "{output}",
     "template": [
       "DocFxTemplate"
     ]
