--- a/Bitbird.Core.Tools.Doc.DotNet/resources/build.json.tmpl
+++ b/Bitbird.Core.Tools.Doc.DotNet/resources/build.json.tmpl
@@ -3,13 +3,13 @@
     "content": [
       {
         "files": [ "**.yml", "**.md" ],
-        "cwd": "."
+        "cwd": "{input}"
       }
     ],
     "resource": [
       {
         "files": [ "**" ],
-        "cwd": ".",
+        "cwd": "{input}",
         "exclude": [ "**.yml", "**.md" ]
       }
     ],
